# 3DGaussian

./: .gitignore  CMakeLists.txt  README.md  out_1m_sort1.ppm  out_sort0.ppm  out_sort1.ppm  out_sort_on.ppm  out_sort_on_fixed.ppm  out_true_sort.ppm
assets/: result.mtl
include/gr/: colors_io.h  cuda_utils.cuh  gaussian_types.h  image_io.h  obj_to_gaussians.h  renderer.h
outputs/_smoke_opt/: gaussians_trained.npz  loss.txt  trained_colors.npy
outputs/trained_from_targetTexture/: gaussians_trained.npz  loss.txt  trained_colors.npy
python/: demo_render_obj.py  device_utils.py  fit_multiview_stub.py  optimize_colors_demo.py  optimize_colors_multiview.py  requirements_torch.txt  torch_renderer.py  view_gaussians.py
src/: bindings.cpp  cli_main.cpp  colors_io.cpp  cuda_link_stub.cu  image_io_wic.cpp  model_viewer_main.cpp  obj_to_gaussians.cpp  renderer.cu  renderer_cpu.cpp  renderer_dispatch.cpp  viewer_main.cpp
